--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ html, body {
 body{
     background-color: #edeec9;
     vertical-align : middle;
-    height: 90vh;
+    height: 80vh;
 }
  .card_holder{
     display : flex;
@@ -26,36 +26,70 @@ body{
     width: 90%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-family: Arial, sans-serif;
+    
+    font-family: Comic Sans MS, Comic Sans;
 }
 
 .lesson-info {
     display: flex;
+    width: 70%;
     flex-direction: column;
     align-items: flex-start;
 }
 
 .lesson-details {
     display: flex;
+    width: 30%;
     flex-direction: column;
     align-items: flex-start;
 }
 
+.number{
+width: 10%;
+}
+
 .lesson-number {
-    font-size: 14px;
-    color: #888;
+    border-radius: 50%;
+    width: 13px;
+    height: 13px;
+    padding: 4px;
+    background: #dde7c7;
+    border: 2px solid #52796f;
+    color: #52796f;
+    text-align: center;
+
+    font: 13px Arial, sans-serif;
 }
 
 .lesson-name {
-    font-size: 20px;
-    color: #333;
-    margin: 5px 0;
+    font-size: 30px;
+    color: #173d30;
+    height: 10px
 }
 
-.teacher-name,
+.lesson-time {
+    font-size: 18px;
+    color: #173d30;
+    height: 10px
+}
+
+.teacher-name{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    color: #173d30;
+    font-size: 24px;
+}
+
 .classroom {
-    font-size: 16px;
-    color: #555;
-    margin: 2px 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    font-size: 24px;
+    color: #173d30;
+
 }
