--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ h3{
    height: 15%;
    display: flex;
    align-items: center;
+   text-align: center;
    justify-content: space-between;
   }
 
@@ -229,6 +230,158 @@ h3{
 .arrow-left-3 {
   transform: rotate(180deg);
 }
+
+.theme_sw{
+  max-height: 1vh;
+}
+
+:root {
+	--hue: 223;
+	--primary: hsl(var(--hue),90%,50%);
+	--trans-dur: 0.3s;
+	--trans-timing: cubic-bezier(0.76,0.05,0.24,0.95);
+	--trans-timing-in: cubic-bezier(0.76,0.05,0.86,0.06);
+	--trans-timing-out: cubic-bezier(0.05,0.76,0.06,0.86);
+}
+input {
+	color: var(--fg);
+	font: 1em/1.5 sans-serif;
+}
+
+.scaleb{
+  position: relative;
+  transform-origin: top center;
+  scale: 20%
+}
+
+.switch {
+	margin: auto;
+	position: relative;
+}
+.switch__icon,
+.switch__input {
+	display: block;
+}
+.switch__icon {
+	position: absolute;
+	top: 0.375em;
+	right: 0.375em;
+	width: 0.75em;
+	height: 0.75em;
+	transition:
+		opacity calc(var(--trans-dur) / 2),
+		transform calc(var(--trans-dur) / 2);
+}
+
+
+.switch__icon polyline {
+	transition: stroke-dashoffset calc(var(--trans-dur) / 2);
+}
+.switch__icon--light,
+.switch__icon--light polyline {
+	transition-delay: calc(var(--trans-dur) / 2);
+	transition-timing-function: var(--trans-timing-out);
+}
+.switch__icon--dark {
+	opacity: 0;
+	transform: translateX(-0.75em) rotate(30deg) scale(0.75);
+	transition-timing-function: var(--trans-timing-in);
+}
+.switch__input {
+	background-color: hsl(210,90%,70%);
+	border-radius: 0.75em;
+	box-shadow:
+		0 0 0 0.125em hsla(var(--hue),90%,50%,0),
+		0.125em 0.125em 0.25em hsla(var(--hue),90%,10%,0.2);
+	outline: transparent;
+	position: relative;
+	width: 3em;
+	height: 1.5em;
+	-webkit-appearance: none;
+	appearance: none;
+	-webkit-tap-highlight-color: transparent;
+	transition:
+		background-color var(--trans-dur) var(--trans-timing),
+		box-shadow 0.15s linear;
+}
+.switch__input:focus-visible {
+	box-shadow:
+		0 0 0 0.125em hsl(var(--hue),90%,50%),
+		0.125em 0.125em 0.25em hsla(var(--hue),90%,10%,0.2);
+}
+.switch__input:before,
+.switch__input:after {
+	content: "";
+	display: block;
+	position: absolute;
+}
+.switch__input:before {
+	background-color: #abc4ff;
+	border-radius: inherit;
+	mask-image: linear-gradient(120deg,hsl(0,0%,0%) 20%,hsla(0,0%,0%,0) 80%);
+	-webkit-mask-image: linear-gradient(120deg,hsl(0,0%,0%) 20%,hsla(0,0%,0%,0) 80%);
+	inset: 0;
+	transition: background-color var(--trans-dur) var(--trans-timing);
+}
+.switch__input:after {
+	background-color: #edf2fa;
+	border-radius: 50%;
+	box-shadow: 0.05em 0.05em 0.05em hsla(var(--hue),90%,10%,0.1);
+	top: 0.125em;
+	left: 0.125em;
+	width: 1.25em;
+	height: 1.25em;
+	transition:
+		background-color var(--trans-dur) var(--trans-timing),
+		transform var(--trans-dur) var(--trans-timing);
+	z-index: 1;
+}
+.switch__input:checked {
+	background-color: #6c58f1;
+}
+.switch__input:checked:before {
+	background-color: #0d0a1c;
+}
+.switch__input:checked:after {
+	background-color: hsl(0,0%,0%);
+	transform: translateX(1.5em);
+}
+.switch__input:checked ~ .switch__icon--light,
+.switch__input:checked ~ .switch__icon--light polyline {
+	transition-delay: 0s;
+	transition-timing-function: var(--trans-timing-in);
+}
+.switch__input:checked ~ .switch__icon--light {
+	opacity: 0;
+	transform: translateX(-0.75em) rotate(-30deg) scale(0.75);
+}
+.switch__input:checked ~ .switch__icon--light polyline {
+	stroke-dashoffset: 1.5;
+}
+.switch__input:checked ~ .switch__icon--dark {
+	opacity: 1;
+	transform: translateX(-1.5em);
+	transition-delay: calc(var(--trans-dur) / 2);
+	transition-timing-function: var(--trans-timing-out);
+}
+.switch__sr {
+	overflow: hidden;
+	position: absolute;
+	width: 1px;
+	height: 1px;
+}
+
+#footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
+#about{
+  margin-top: 20px;
+}
+
  /* менюшка ============================== */
 
 
@@ -344,7 +497,7 @@ h3{
    display: none;
  }
 
- input[type="radio"],input[type="checkbox"]{
+ input[type="radio"]{
   display:none;
   cursor: pointer;
 }
@@ -398,9 +551,9 @@ h3{
    background-color: var(--color1);
    transition: 0.1s ease;
    box-shadow: 0px 0px 24px 6px rgba(13, 10, 28, 0.42);
-   min-height: 70%;
    border-radius: 10px;
    padding: 1rem;
+   height: 70%;
  }
  #selector{
   align-items: center;
@@ -411,12 +564,13 @@ h3{
  
 
  .groups{
-  padding-top: 20px;
+  padding-top: 5px;
+  padding-left: 4px;
   min-width: 40%;
   font-size: 1.5vh;
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  
+  scroll-behavior: auto;
  }
 
  .m_btn{
@@ -437,7 +591,7 @@ h3{
   transition: 0.1s ease;
  }
 
- #footer {
+ #about {
    font-size: 10px;
    text-decoration-color: var(--color1);
    transition: 0.1s ease;
@@ -572,6 +726,7 @@ body {
 
 
  .lesson-card-details {
+  border-radius: 5px;
   opacity: 0;
   position: absolute;
   display: inline-block;
